--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Basic
-title: 潘柏信
+title: 孙佰树
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
 avatarTitle: leopardpan
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
+avatarDesc: PHP / 前段开发
 url: "http://baixin.io"
 
 # Comment
@@ -22,7 +22,7 @@ social:
     # juejin: xxx
     jianshu: 2ada30d8d0f7
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: 635976605@qq.com
 
 
 # 百度统计 
