--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Basic
 title: 孙佰树
 subtitle: 个人站
-description: 欢迎来到我的个人站~
+description: 欢迎来到我的个人网站~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: ShuGe
 # 头像里面的描述
 avatarDesc: PHP / 前段开发
 url: "http://baixin.io"
