--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ comment:
 
 # Social
 social:
-    weibo: 5366874726 
-    github: leopardpan
-    # zhihu: panpanleopard
+    weibo: 635976605@qq.com 
+    github: sunbaishu
+    # zhihu: 
     # juejin: xxx
     jianshu: 2ada30d8d0f7
     # twitter: 
